hphp/hack/test/typecheck/reactive/only_first_error/references_in_rx1.php.exp
File "references_in_rx1.php", line 5, characters 7-7:
Encountered unexpected token `&`. (Parsing[1002])
