hphp/hack/test/typecheck/reactive/only_first_error/references_in_rx1.php
<?hh // partial

<<__Rx>>
function foo(
  int &$x, // bad
): void {
}
